--- a/task-management-app/package.json
+++ b/task-management-app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
@@ -26,6 +27,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-draggable": "^4.4.5",
+    "react-modal": "^3.16.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
@@ -33,6 +35,7 @@
     "*.css"
   ],
   "devDependencies": {
-    "@types/css-modules": "^1.0.2"
+    "@types/css-modules": "^1.0.2",
+    "@types/react-modal": "^3.16.0"
   }
 }
